src/styles/_md-styles.scss
.how-to-test-checklist-item {
  table td {
    width: 50%;
    align-content: baseline;
  }
}

.table-wrapper {
  overflow-x: auto;
}

.keyboard-key {
  padding: 3px 6px;
  background: #eee;
  border-radius: 3px;
  outline: 1px solid #ddd;
  color: black;
}

example, /* stylelint-disable-line selector-type-no-unknown */
.example {
  padding: 2rem;
  background: var(--color-code-block); /* Adapts to theme */
  margin-top: 1rem;
  margin-bottom: 3rem;
  display: block;

  .decorated {
    display: flex;
  }

  &--contains-icon {
    img {
      height: 2rem;
      width: 2rem;
      display: block;
    }
  }

  main {
    min-height: auto;
    display: block;
  }

  table {
    background: var(--color-text-on-primary);
  }

  /* stylelint-disable no-descending-specificity */
  .switch {
    max-width: 450px;
    margin: 0;
    background-color: var(--color-text-on-primary);

    input[role="switch"]:checked + label::before {
      transform: translateX(22px);
    }

    input[role="switch"]:checked + label::after {
      background-color: var(--magentaa11y-color-fill-divider-brand)
    }

    input[role="switch"][aria-disabled="true"] + label::after {
      background-color: var(--color-surface-container-high);
    }

    input[role="switch"]:focus-visible + label {
      outline: .5rem auto Highlight;
      outline: -webkit-focus-ring-color auto 1px;
      outline-offset: 4px;
    }

    label {
      display: grid;
      align-items: center;
      grid-template-columns: 1fr max-content;
      cursor: pointer;
      margin-top: 1rem;

      &::before {
        content: "";
        border-radius: 20px;
        box-shadow: 0 2px 4px 0 rgba(0 0 0 / 10%);
        display: block;
        grid-column: 2;
        grid-row: 1;
        width: 28px;
        height: 28px;
        background-color: var(--color-text-on-primary);
        position: relative;
        transform: translateX(2px);
        transition: all .2s ease-in-out;
        z-index: 1;
      }

      &::after {
        content: "";
        background-color: var(--color-text-disabled);
        border-radius: 24px;
        cursor: pointer;
        display: block;
        grid-column: 2;
        grid-row: 1;
        position: relative;
        height: 32px;
        width: 52px;
        transition: background-color .2s ease-in-out;
      }
    }
  }
  /* stylelint-enable no-descending-specificity */

  .spa {
    .slide-list {
      margin: 0;
      padding: 0;
    }

    .slide {
      list-style: none;
      background: var(--color-on-primary);
      padding: 1rem;
      margin-top: 1rem;

      &:not(.visible) {
        display: none;
      }
    }
  }
  
  .stepper {
    display: inline-grid;
    grid-template-columns: 39px 1fr 39px;
    grid-template-rows: 38px;
    -moz-column-gap: var(--magentaa11y-spacing-size-4);
    column-gap: var(--magentaa11y-spacing-size-4);
    border-radius: var(--magentaa11y-border-radius-size-24);
    border: var(--magentaa11y-border-weight-size-1) solid var(--color-input-border);
    place-items: center;
    height: var(--magentaa11y-spacing-size-40);
    width: 120px;
    position: relative;
    background-color: var(--color-on-primary);
  }
  
  input[aria-disabled="true"],
  input[disabled] {
    background: var(--color-background-secondary);
  }

  // text input styles within examples
  textarea, 
  input[type="text"], 
  input[type="email"], 
  input[type="date"], 
  input[type="tel"], 
  input[type="number"], 
  input[type="password"], 
  input[type="button"] {
    border: 2px solid var(--color-on-background);
    border-radius: 2px;
    display: block;
    font-size: 1.125rem;
    padding: .75rem .5rem;
    width: auto;
  }

  input[type="text"]:disabled,
  input[type="text"][aria-disabled="true"] {
    background: var(--magentaa11y-color-brand-grayscale-300);
  }

  // search input example
  form[role="search"] {
    box-shadow: 0 0 0 3px var(--color-on-primary);
    display: flex;
    transition: 0.7s;
    border-radius: 0.125rem;

    input[type="search"] {
      background-color: var(--color-on-primary);
      border: 2px solid var(--color-on-background);
      border-radius: 0;
      border-right: none;
      display: block;
      line-height: 0;
      margin: 0;
      padding: 0;
      position: relative;
      text-indent: 0.5rem;
      width: 100%;

      &::-webkit-calendar-picker-indicator {
        display: none !important;
      }
    }

    button {
      background: var(--color-on-primary);
      border: 2px solid var(--color-on-tertiary);;
      border-left: none;
      display: block;
      height: 2.375rem;
      line-height: 0;
      margin: 0;
      padding: 0;
      position: relative;
      width: 2.25rem;
    }
  }

  .tidbit {
    display: grid;
    grid-template-columns: 40px 1fr;
    align-content: start;
    max-width: 600px;
    padding: 1em;
    background: var(--color-text-on-primary);
    border-left: 4px solid var(--color-on-tertiary);

    &.error {
      border-color: var(--color-error-container);
      background-color: var(--color-on-error-container);

      svg {
        fill: var(--color-error-container);
      }
    }

    &.caution {
      border-color: var(--color-on-caution);
      background-color: var(--color-on-caution-container);

      svg {
        fill: var(--color-on-caution);
      }
    }

    &.success {
      border-color: var(--color-success);
      background-color: var(--color-on-success-container);

      svg {
        fill: var(--color-success);
      }
    }

    h2 {
      margin: 0;
      padding: 0;
    }

    a {
      text-decoration: underline;
      color: var(--color-on-tertiary);
    }
  }

  label {
    display: block;
    font: var(--content-details-label-font);
    margin: 0 0 .5rem;
    position: relative;
  }

  .hint {
    margin: 0.675rem 0 1rem;
    padding: 0;
    color: var(--color-text-disabled);
    display: block;
    border-radius: 2px;
  }
}

.bad-example {
  color: var(--color-error);
}
/* ... */

